--- a/BlazingTrails_Client/_Imports.razor
+++ b/BlazingTrails_Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazingTrails_Client
+@using BlazingTrails_Client.Features.Home
+@using BlazingTrails_Client.Features.Layout
